--- a/response.html
+++ b/response.html
@@ -3683,21 +3683,21 @@ var win = {
 			var carPremiumCarSeq = "";
 			var premiumAttImgYn = "";
 
-			if(diagCarYn == "Y"){
-				if(diagCarYn == "Y" && diagAttImgYn == "Y"){
-					viewType = "160110";	
-				}else{
-					viewType = "160120";
-				}
-			}
+			// if(diagCarYn == "Y"){
+			// 	if(diagCarYn == "Y" && diagAttImgYn == "Y"){
+			// 		viewType = "160110";	
+			// 	}else{
+			// 		viewType = "160120";
+			// 	}
+			// }
 
-			if(premiumCarYn == "Y"){
-				if(premiumCarYn == "Y" && premiumAttImgYn == "Y"){
-					viewType = "160110";	
-				}else{
-					viewType = "160120";
-				}
-			}
+			// if(premiumCarYn == "Y"){
+			// 	if(premiumCarYn == "Y" && premiumAttImgYn == "Y"){
+			// 		viewType = "160110";	
+			// 	}else{
+			// 		viewType = "160120";
+			// 	}
+			// }
 
 			if (viewType=="160120"){
 				var checkLinkUrl = "";
@@ -3715,7 +3715,6 @@ var win = {
 			}else if (viewType=="160140"){
 				layerAlert("성능기록부가 입력되지 않았습니다.");
 			}else {
-
 				var carSeq = "24663799";
 				var params = [];
 				
